--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -31,7 +31,7 @@ PROP_FormLoader_Name=Form Objects
 CTL_NonVisualComponents=Other Components
 
 # form window title prefix and postfix
-CTL_FormWindowTitle=Form
+CTL_FormWindowTitle=Formn
 CTL_FormTitle_RO=(read only)
 
 # name of GUI Editing workspace
@@ -119,6 +119,7 @@ ACSD_CTL_CANCEL=N/A
 CTL_Advanced=Advanced...
 CTL_Advanced_mnemonic=A
 ACSD_CTL_Advanced=N/A
+ACSD_FormCustomEditorAdvanced=N/A
 
 # displayed text of not set value (for "write only" properties)
 CTL_ValueNotSet=<Not Set>
@@ -150,6 +151,7 @@ CTL_ErrorDetailTitle=Error/Warning Details
 CTL_ErrorLogText1=Some errors occurred while loading the form.\nSee the list of errors and warnings below and click on Detail to get a detailed description of each error.
 CTL_ErrorLogText2=List of errors/warnings:
 CTL_ErrorLogText2_Mnemonic=L
+ACSD_CTL_ErrorList=N/A
 # list item for a warning
 # {0} = description of the warning
 FMT_WarningItem=WARNING: {0}
@@ -161,6 +163,10 @@ ACSD_CTL_CLOSE=N/A
 CTL_DETAILS=Details
 CTL_DETAILS_Mnemonic=D
 ACSD_CTL_DETAILS=N/A
+CTL_ErrorDetail=Error Details
+CTL_ErrorDetail_Mnemonic=E
+ACSD_CTL_ErrorDetail=N/A
+ACSD_ErrorDetailDialog=N/A
 
 ERR_COMPONENT_NAME_ALREADY_IN_USE=Two components in the same form cannot have the same name.
 ERR_INVALID_COMPONENT_NAME=The name of a component must be a valid Java variable name.
@@ -251,6 +257,8 @@ MSG_ERR_CannotAddForm=Form cannot be added to itself.
 
 # Component Inspector Title
 CTL_InspectorTitle=Component Inspector
+ACS_ComponentTree=Component tree
+ACSD_ComponentTree=N/A
 
 # formatting of title of window which is displayed instead of form window when the
 # form loading fails
@@ -387,23 +395,46 @@ FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
   CTL_CW_Step1_Title=Select Source Event
   CTL_CW_ConnectionSource=Activation Event on Source
   CTL_CW_SourceComponent=Source Component:
-  CTL_CW_Event=Events:
+  CTL_CW_SourceComponent_Mnemonic=S
+  CTL_CW_Event=Events
+  CTL_CW_Event_Mnemonic=E
   CTL_CW_EventHandlerMethod=Event Handler Method
   CTL_CW_MethodName=Method Name:
+  CTL_CW_MethodName_Mnemonic=M
   CTL_CW_Advanced=Advanced
+  ACSD_CW_ConnectionPanel1=N/A
+  ACSD_CW_EventTree=N/A
+  ACSD_CW_MethodName=N/A
+  ACSD_CW_SourceComponent=N/A
 
   CTL_CW_Step2_Title=Specify Target Operation
   CTL_CW_ConnectionTarget=Operation on Target
   CTL_CW_TargetComponent=Target Component:
+  CTL_CW_TargetComponent_Mnemonic=T
   CTL_CW_SetProperty=Set Property
+  CTL_CW_SetProperty_Mnemonic=S
   CTL_CW_MethodCall=Method Call
-  CTL_CW_UserCode=User Code
+  CTL_CW_MethodCall_Mnemonic=M
+  CTL_CW_XUserCode=User Code
+  CTL_CW_XUserCode_Mnemonic=U
   CTL_CW_UserCodeText1=After clicking Finish, enter the custom code
   CTL_CW_UserCodeText2=for handling the event in the Editor.
+  ACSD_CW_TargetComponent=N/A
+  ACSD_CW_SetProperty=N/A
+  ACSD_CW_MethodCall=N/A
+  ACSD_CW_XUserCode=N/A
+  ACSD_CW_ActionList=N/A
+  ACSD_CW_ConnectionPanel2=N/A
 
   CTL_CW_Step3_Title=Enter Parameters
   CTL_CW_Preview=Preview
   CTL_CW_GeneratedPreview=Generated Parameters Preview:
+  CTL_CW_GeneratedPreview_Mnemonic=G
+  CTL_CW_ParamTabs=Parameters
+  CTL_CW_ParamTabs_Mnemonic=r
+  ACSD_CW_Preview=N/A
+  ACSD_CW_ParamTabs=N/A
+  ACSD_CW_ConnectionPanel3=N/A
 
   # {0} = required type (short class name)
   CTL_FMT_CW_SelectMethod=Select Method ({0})
@@ -440,6 +471,9 @@ FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
   CTL_CW_PropertyList=Properties
   CTL_CW_PropertyList_Mnemonic=P
   ACSD_CTL_CW_PropertyList=N/A
+  ACSD_ParametersPicker=N/A
+  ACSD_PropertyPicker=N/A
+  ACSD_MethodPicker=N/A
 
   ACSD_CTL_CW_ValueField=N/A
   ACSD_CTL_CW_BeanCombo=N/A
@@ -563,6 +597,7 @@ ACSD_CTL_EE_Handlers=N/A
 ACSD_CTL_EE_ADD=N/A
 ACSD_CTL_EE_REMOVE=N/A
 ACSD_CTL_EE_RENAME=N/A
+ACSD_EventCustomEditor=N/A
 
 #CustomCodeEditor
 CTL_CC_PROPERTY_EDITOR=Property Editor
@@ -618,6 +653,8 @@ CTL_AdvancedInitializationCode=Advanced Initialization Code
 LAB_SelectMode=Select Mode:
 LAB_SelectMode.mnemonic=M
 ACSD_BTN_SelectMode=N/A
+# 0 = Description of selected custom editor.
+ACSD_FormCustomEditor=Description of selected mode: {0}
 
 CTL_GeneratePostInitializationCode=Generate Post-initialization Code
 CTL_GeneratePostInitializationCode_Mnemonic=o
