--- a/form/src/org/netbeans/modules/form/editors/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/editors/Bundle.properties
@@ -16,3 +16,16 @@
 CustomCodeEditor.label1=Insert Code:
 CustomCodeEditor.label1.mnemonic=I
 ACSD_CustomCodeEditor.label1=N/A
+ACSD_CustomCodeEditor=N/A
+
+# KeyStrokeEditor
+CTL_VirtualKey=Virtual Key:
+CTL_VirtualKey_Mnemonic=V
+CTL_KeyStroke=Key Stroke:
+CTL_KeyStroke_Mnemonic=K
+ACSD_VirtualKey=N/A
+ACSD_KeyStroke=N/A
+ACSD_CtrlKey=N/A
+ACSD_AltKey=N/A
+ACSD_ShiftKey=N/A
+ACSD_KeyStrokeCustomEditor=N/A
