--- a/form/src/org/netbeans/modules/form/editors2/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/editors2/Bundle.properties
@@ -19,6 +19,9 @@ CTL_SystemPalette=System Palette
 CTL_BorderEditor_DisplayName=Border Editor
 LAB_NoBorder=(No Border)
 LAB_AvailableBorders=Available Borders
+LAB_AvailableBorders_Mnemonic=B
+ACSD_AvailableBorders=N/A
+ACSD_BorderCustomEditor=N/A
 
   # {0} long name, {1} short name
   LAB_FMT_UnknownBorder=Unknown Border ({1})
@@ -28,3 +31,4 @@ CTL_CursorEditor_DisplayName=Cursor Editor
 CTL_SelectCursorName=Select Cursor Name
 CTL_SelectCursorName_Mnemonic=S
 ACSD_CTL_SelectCursorName=N/A
+ACSD_CursorCustomEditor=N/A
