--- a/form/src/org/netbeans/modules/form/palette/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/palette/Bundle.properties
@@ -83,12 +83,16 @@ CTL_Select_Approve_Button=OK
 CTL_JarArchivesMask=JAR Archives
 CTL_SelectJB=Select JavaBean
 CTL_Install=Install
-CTL_SelectBeans=Available JavaBeans:
+CTL_SelectBeans=Available JavaBeans
+CTL_SelectBeans_Mnemonic=A
+ACSD_CTL_SelectBeans=N/A
+ACSD_SelectBeansDialog=N/A
 CTL_Select=Select
 CTL_SelectPalette=Palette Category
 CTL_PaletteCategories=Select Palette Category:
 CTL_PaletteCategories_Mnemonic=S
 ACSD_CTL_PaletteCategories=N/A
+ACSD_PaletteCategoriesSelector=N/A
 CTL_InstallingBeanTitle=Installing JavaBeans
 CTL_FMT_InstallingBean=Installing {0} ...
 CTL_UpdatingPalette=Updating Component Palette ...
