--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -120,6 +120,7 @@ CTL_CountMinusRow_Mnemonic=.
 CTL_CountMinusColumn_Mnemonic=]
 CTL_HINT_RemoveColumn=Remove column
 CTL_HINT_RemoveRow=Remove row
+ACSD_TableCustomEditor=N/A
 
 #DimensionCustomEditor
 CTL_Dimension=Dimension
@@ -129,6 +130,7 @@ CTL_Height=Height:
 CTL_Height_mnemonic=H
 ACSD_CTL_Width=N/A
 ACSD_CTL_Height=N/A
+ACSD_DimensionCustomEditor=N/A
 
 #DimensionEditor
 CTL_HintFormat=[width,height]
@@ -150,6 +152,10 @@ CTL_FontStyle_mnemonic=y
 CTL_Size=Size:
 CTL_Size_mnemonic=S
 CTL_Preview=Preview
+ACSD_CTL_Font=N/A
+ACSD_CTL_FontStyle=N/A
+ACSD_CTL_Size=N/A
+ACSD_FontCustomEditor=N/A
 
 #InsetsCustomEditor
 CTL_Insets=Insets
@@ -165,6 +171,7 @@ ACSD_CTL_Top=N/A
 ACSD_CTL_Left=N/A
 ACSD_CTL_Bottom=N/A
 ACSD_CTL_Right=N/A
+ACSD_InsetsCustomEditor=N/A
 
 #InsetsEditor
 CTL_HintFormatIE=[top,left,bottom,right]
@@ -202,6 +209,7 @@ ACSD_CTL_X=N/A
 CTL_Y=Y:
 CTL_Y_Mnemonic=Y
 ACSD_CTL_Y=N/A
+ACSD_PointCustomEditor=N/A
 
 #PointEditor
 CTL_HintFormatPE=[x,y]
