16668 fixed. Correct XHTML document generated.

--- a/xml.tools/src/org/netbeans/modules/xml/tools/doclet/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/doclet/Bundle.properties
@@ -16,6 +16,8 @@ TEXT_Element_Details=Element Details
 TEXT_ContentModel=Element Content Model
 TEXT_Referenced_by=Referenced by
 TEXT_Declared_Attributes=Declared Attributes
+#do not use < and & unescaped
+PAGE_TITLE=DTD Grammar Documentation
 
 ## DocletAction.java
 NAME_SUFFIX_Documentation=Documentation
