accessibility of BeanInfo Editor

--- a/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
@@ -53,6 +53,7 @@ ACS_ImageSourceNameTextFieldA11yName=Image name text field
 ACS_ImageSourceNameTextFieldA11yDesc=Image name text field.
 ACS_ImageSourceNameBrowseButtonA11yName=Browse Button
 ACS_ImageSourceNameBrowseButtonA11yDesc=Browse filesystems to select icon image.
+ACSD_BeanInfoEditorDialog=BeanInfo Editor Dialog. On left side is Tree and on right side is table of properties
 
 #Bean info features properties and hints
 
