--- a/o.n.core/test/build.xml
+++ b/o.n.core/test/build.xml
@@ -48,39 +48,6 @@ Microsystems, Inc. All Rights Reserved.
     <property name="xtest.includes" value=""/>
     <property name="xtest.excludes" value=""/>
     
-    <!-- ============== -->
-    <!-- Set classpaths -->
-    <!-- ============== -->
-    
-    <!-- this classpath will be used for executing tests against jars -->
-    <path id="jar.codetest.classpath">
-        <fileset dir="../netbeans/lib">
-            <include name="core.jar"/>
-            <include name="ext/*.jar"/>
-        </fileset>
-        <pathelement location="../../openide/netbeans/lib/openide.jar"/>
-    </path>
-    
-    <!-- this classpath will be used for executing tests against sources -->
-    <path id="src.codetest.classpath">
-        <!-- Working sources should take precedence over core.jar: -->
-        <pathelement location="../src"/>
-        <fileset dir="../netbeans/lib">
-            <!-- But loading core.jar means its manifest is available to module system: -->
-            <include name="core.jar"/>
-            <include name="ext/*.jar"/>
-        </fileset>
-        <pathelement location="../../openide/netbeans/lib/openide.jar"/>
-    </path>
-    
-    <!-- this classpath will be used for executing tests against installed IDE -->
-    <path id="ide.codetest.classpath">
-        <fileset dir="${netbeans.home}/lib">
-            <include name="core.jar"/>
-            <include name="ext/*.jar"/>
-        </fileset>
-        <pathelement location="${netbeans.home}/lib/openide.jar"/>        
-    </path>
     
     <!-- =========== -->
     <!-- Init target -->
@@ -229,24 +196,91 @@ Microsystems, Inc. All Rights Reserved.
     
     <target name="jartest-classpath" if="jarcode.classpath">
         <echo message="Using jars classpath."/>
+        <!-- this classpath will be used for executing tests against jars -->
+	<path id="jar.codetest.classpath">
+        	<fileset dir="../netbeans/lib">
+            		<include name="core.jar"/>
+            		<include name="ext/*.jar"/>
+        	</fileset>
+        	<pathelement location="../../openide/netbeans/lib/openide.jar"/>
+    	</path>
+    	<!-- this classpath will be used for compiling tests against jars -->
+	<path id="jar.compiletest.classpath">        
+	    	<pathelement location="../../openide/openide-13javac-workaround.jar"/>
+	    	<pathelement location="../netbeans/lib/core.jar"/>
+	    	<fileset dir="../../openide/netbeans/lib">
+                    <include name="openide*.jar"/>
+             	</fileset>
+             	<pathelement path="${junit.path}"/>
+	    	<pathelement path="${xerces.path}"/>
+	</path>
         <pathdef useid="codetest.classpath">
             <path refid="jar.codetest.classpath"/>
+        </pathdef>
+        <pathdef useid="compiletest.classpath">
+            <path refid="jar.compiletest.classpath"/>
         </pathdef>
     </target>
         
     <target name="srctest-classpath" if="srccode.classpath">
         <echo message="Using srcs classpath."/>
+        <!-- this classpath will be used for executing tests against sources -->
+    	<path id="src.codetest.classpath">
+        <!-- Working sources should take precedence over core.jar: -->
+        <pathelement location="../src"/>
+        <fileset dir="../netbeans/lib">
+            <!-- But loading core.jar means its manifest is available to module system: -->
+            <include name="core.jar"/>
+            <include name="ext/*.jar"/>
+        </fileset>
+        <pathelement location="../../openide/netbeans/lib/openide.jar"/>
+    	</path>
+    	<!-- this classpath will be used for compiling tests against sources -->
+    	<path id="src.compiletest.classpath">        
+	        <pathelement location="../../openide/openide-13javac-workaround.jar"/>
+	        <pathelement location="../src"/>
+	        <fileset dir="../../openide/netbeans/lib">
+                    <include name="openide*.jar"/>
+                </fileset>
+	        <pathelement path="${junit.path}"/>
+		<pathelement path="${xerces.path}"/>
+	</path>
         <pathdef useid="codetest.classpath">
             <path refid="src.codetest.classpath"/>
+        </pathdef>
+        <pathdef useid="compiletest.classpath">
+            <path refid="src.compiletest.classpath"/>
         </pathdef>
     </target>
     
     <target name="idetest-classpath" if="idecode.classpath">
         <echo message="Using IDE classpath."/>
+        <!-- this classpath will be used for executing tests against installed IDE -->
+    	<path id="ide.codetest.classpath">
+        	<fileset dir="${netbeans.home}/lib">
+            		<include name="core.jar"/>
+            		<include name="ext/*.jar"/>
+        	</fileset>
+        	<pathelement location="${netbeans.home}/lib/openide.jar"/>        
+    	</path>
+    	<!-- this classpath will be used for compiling tests against installed IDE -->
+    	<path id="ide.compiletest.classpath">        
+    		<pathelement location="${xtest.home}/lib/openide-13javac-workaround.jar"/>
+	        <pathelement location="${netbeans.home}/lib/core.jar"/>
+	        <fileset dir="${netbeans.home}/lib">
+                    <include name="openide*.jar"/>
+                </fileset>
+	        <pathelement path="${junit.path}"/>
+		<pathelement path="${xerces.path}"/>
+    	</path>
         <pathdef useid="codetest.classpath">
             <path refid="ide.codetest.classpath"/>
         </pathdef>
+        <pathdef useid="compiletest.classpath">
+            <path refid="ide.compiletest.classpath"/>
+        </pathdef>
     </target>
+
     
     <!-- ============= -->
     <!-- IDE test part -->
@@ -362,21 +396,13 @@ Microsystems, Inc. All Rights Reserved.
     </target>
     
     <!-- Compiles all tests -->
-    <target name="compile" depends="init" unless="xtest.distexec">
+    <target name="compile" depends="init,prepare-classpath" unless="xtest.distexec">
         <ant dir="unit/src/org/netbeans/core/modules"/>
         <ant dir="unit/src/org/netbeans/core/lookup/data"/>
         <javac srcdir="unit/src" 
                deprecation="${build.compiler.deprecation}"
                debug="${build.compiler.debug}">
-            <classpath>
-                <pathelement location="../src"/>
-		<pathelement location="../../openide/openide-13javac-workaround.jar"/>		
-                <fileset dir="../../openide/netbeans/lib">
-                    <include name="openide*.jar"/>
-                </fileset>
-                <pathelement path="${junit.path}"/>
-		<pathelement path="${xerces.path}"/>
-            </classpath>            
+            <classpath refid="compiletest.classpath"/>
             <exclude name="**/data/"/>
             <exclude name="org/netbeans/core/modules/jars/"/>
         </javac>
