IN=4250 - new jsp debug module

--- a/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
+++ b/web.debug/src/org/netbeans/modules/web/debug/Bundle.properties
@@ -69,3 +69,25 @@ LBL____=<--->
 HINT_JSP_BREAKPOINT_ANNOTAION_SHORT_DESCRIPTION=JSP breakpoint
 
 HINT_JSP_BREAKPOINT=JSP breakpoint 1
+
+CTL_settings_IE=Web debug settings
+
+# SettingsIEBeanInfo
+PROP_SHOW_LINE_IN_JSP=JSP Compiler Errors
+HINT_SHOW_LINE_IN_JSP=Selects which source to show for compiler errors
+PROP_DEBUG_TRACE_DYNAMIC_LINES=Skip Static Lines
+HINT_DEBUG_TRACE_DYNAMIC_LINES=When true, stepping through the code skips the lines corresponding to static HTML in the JSP
+
+# ShowErrorLineEditor
+CTL_SHOW_ERROR_SERVLET=Show in servlet source
+CTL_SHOW_ERROR_JSP=Show in JSP source
+
+# DebugTracingEditor
+CTL_DEBUG_TRACE_ALL_LINES=False
+CTL_DEBUG_TRACE_DYNAMIC_LINES=True
+
+PROP_JspLoaderIE_Name=JSP Objects (Advanced)
+PROP_JspServletDataLoaderIE_Name=JSP-based Java Servlet Objects (Advanced)
+
+PROP_deployment=Deployment Entries
+HINT_deployment=Servlet elements from the deployment descriptor mapped to this JSP file
