--- a/properties/src/org/netbeans/modules/properties/Bundle.properties
+++ b/properties/src/org/netbeans/modules/properties/Bundle.properties
@@ -11,12 +11,18 @@
 
 
 # BundleEditPanel
-CTL_AutoResize=Auto Resize
+ACS_BundleEditPanel=This panel allows you to edit Bundles
+CTL_AutoResize=\ Auto Resize
+ACS_CTL_AutoResize=N/A
+CTL_AutoResize_Mnem=A
 # {0} name of the properties file
 CTL_NewPropertyTitle=New Property
 LBL_AddPropertyButton=New Property...
+ACS_LBL_AddPropertyButton=N/A
+LBL_AddPropertyButton_Mnem=N
 LBL_CommentLabel=Comment:
 LBL_KeyLabel=Key:
+LBL_KeyLabel_Mnem=K
 CTL_SupportedLocales_Mnem=P
 CTL_Variant_Mnem=V
 CTL_CountryCode_Mnem=C
@@ -30,15 +36,32 @@ CTL_AddKey_Mnem=A
 LBL_Keys_Mnem=K
 LBL_CommentLabel_Mnem=C
 LBL_ValueLabel_Mnem=V
-LBL_KeyLabel_Mnem=K
 LBL_RemovePropertyButton=Remove Property
+ACS_LBL_RemovePropertyButton=N/A
+LBL_RemovePropertyButton_Mnem=R
 LBL_ValueLabel=Value:
 MSG_DeleteKeyQuestion=Really delete property {0} ?
+ACS_CTL_Table=This table shows keys and values
+ACS_CTL_TEXTVALUE=Type the value here
+ACS_CTL_TEXTCOMMENT=Type the comments here
+
+ACS_PropertyPanel=This panel allows you to add new key, value and comment.
+ACS_CTL_KeyText=N/A
+ACS_CTL_ValueText=N/A
+ACS_CTL_CommentText=N/A
 
 # BundleNodeCustomizer
 LBL_Locales=Locales:
 CTL_AddLocale=Add Locale
+ACS_CTL_AddLocale=N/A
 CTL_RemoveLocale=Remove Locale
+ACS_CTL_RemoveLocale=N/A
+ACS_CTL_LocalesList=Here is a list of locales in this Bundle.
+ACS_CTL_NameText=N/A
+ACS_CTL_ChangeNameButton=N/A
+ACS_CTL_KeyList=N/A
+
+ACS_BundleNodeCustomizer=This dialog allows you to add and remove locales from this Bundle.
 
 # FileEntryNode
 HINT_name=Name of this object.
@@ -47,14 +70,29 @@ PROP_name=Name
 PROP_template=Template
 
 # FindPanel
-CTL_BackwardCheck=Backward Search
+ACS_FindPanel=This dialog allows you to search by criteria in Bundles
+CTL_BackwardCheck=\ Backward Search
+ACS_CTL_BackwardCheck=N/A
+CTL_BackwardCheck_Mnem=B
 CTL_Cancel=Cancel
+ACS_CTL_Cancel=N/A
 CTL_Find=Find
-CTL_HighlightCheck=Highlight Search
-CTL_MatchCaseCheck=Match Case
-CTL_SearchByRows=Search by Rows
-CTL_WrapSearch=Wrap Search
+ACS_CTL_Find=N/A
+CTL_HighlightCheck=\ Highlight Search
+ACS_CTL_HighlightCheck=N/A
+CTL_HighlightCheck_Mnem=H
+CTL_MatchCaseCheck=\ Match Case
+ACS_CTL_MatchCaseCheck=N/A
+CTL_MatchCaseCheck_Mnem=C
+CTL_SearchByRows=\ Search by Rows
+ACS_CTL_SearchByRows=N/A
+CTL_SearchByRows_Mnem=S
+CTL_WrapSearch=\ Wrap Search
+ACS_CTL_WrapSearch=N/A
+CTL_WrapSearch_Mnem=r
 LBL_Find=Find What:
+LBL_Find_Mnem=W
+ACS_CTL_FindCombo=N/A
 
 # FindPerformer
 LBL_Title=Find
@@ -65,22 +103,37 @@ HINT_item_key=Key for this property
 HINT_item_value=Value of this property
 MSG_CannotRenameKey=The key could not be renamed.\nAnother key with this name already exists.
 PROP_item_comment=Comment
+PROP_item_comment_mnem=C
 PROP_item_key=Key
+PROP_item_key_mnem=K
 PROP_item_value=Value
+PROP_item_value_mnem=V
 
-# LocaleNodeCusotmizer
+# LocaleNodeCustomizer
 LBL_Name=Name:
 LBL_Keys=Keys:
 CTL_AddKey=Add Key
+ACS_CTL_AddKey=N/A
 CTL_RemoveKey=Remove Key
+ACS_CTL_RemoveKey=N/A
+ACS_CTL_NameText=N/A
+
+ACS_LocaleNodeCustomizer=This dialog allows you to add and remove keys from this Bundle.
 
 # LocalePanel
+ACS_CTL_LocaleText=N/A
+ACS_CTL_CountryCombo=N/A
+ACS_CTL_LanguageCombo=N/A
+ACS_CTL_SupportedList=N/A
+ACS_CTL_VariantCombo=N/A
 CTL_CountryCode=Country Code:
 CTL_LanguageCode=Language Code:
 CTL_Locale=Locale:
 CTL_NewFile=New File:
 CTL_SupportedLocales=Predefined Locales:
 CTL_Variant=Variant:
+
+ACS_LocalePanel=This dialog allows you to choose locale
 
 # manifest.mf
 OpenIDE-Module-Name=Resource Bundles
@@ -142,8 +195,7 @@ MSG_AttemptToRenamePrimaryFile=This entry cannot be renamed.
 OPT_concatenate=Append
 OPT_leave_alone=Do nothing
 OPT_overwrite=Overwrite
-
-# PropertiesLocaleNode
+#\u000A# PropertiesLocaleNode
 CTL_PasteKeyNoValue=Paste without value
 CTL_PasteKeyValue=Paste with value
 LAB_NewPropertyAction=Property...
