MemoryMeter action and toolbar added

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -515,6 +515,7 @@ Toolbars/System=System
 Toolbars/View=View
 Toolbars/Debugging.xml=Debugging
 Toolbars/Standard.xml=Standard
+Toolbars/Memory=Memory
 Actions/Tools=Tools
 Projects=Projects
 Bookmarks=&Bookmarks
