--- a/xml.catalog/build.xml
+++ b/xml.catalog/build.xml
@@ -79,6 +79,20 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="javahelp">
+        <mkdir dir="javahelp/org/netbeans/modules/xml/catalog/docs/JavaHelpSearch"/>
+        <jhindexer basedir="javahelp/org/netbeans/modules/xml/catalog/docs/"
+                   db="javahelp/org/netbeans/modules/xml/catalog/docs/JavaHelpSearch"
+                   jhall="${binroot}/nbbuild/lib/jhall.jar">
+            <include name="**/*.html"/>
+            <exclude name="JavaHelpSearch/"/>
+        </jhindexer>
+
+        <mkdir dir="netbeans/modules/docs"/>
+        <locjar jarfile="netbeans/modules/docs/xml-catalog.jar"
+                compress="true">
+            <fileset dir="javahelp" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
+            <locale name="ja"/>
+        </locjar>
     </target>
 
     <target name="netbeans" depends="jars,release,javahelp">
@@ -110,6 +124,7 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="../xml-catalog.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
+        <delete dir="javahelp/org/netbeans/modules/xml/catalog/docs/JavaHelpSearch"/>
 
         <for-each locations="compat"/>
     </target>
