--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -768,34 +768,63 @@ BLOCK_CARET=Solid Block
 
 #Settings for font and color property editor
 #ColoringEditorPanel
-CEP_FontTitle=Font
-CEP_FontTrans=Inherit
-CEP_FgTitle=Foreground Color
-CEP_FgTrans=Inherit
-CEP_BgTitle=Background Color
-CEP_BgTrans=Inherit
-CEP_PreviewTitle=Preview
+CEP_FontTitle=\ Font 
+ACSD_CEP_Font=
+CEP_FontTrans=\ Inherit
+CEP_FontTrans_Mnemonic=I
+ACSD_CEP_FontTrans=
+CEP_FgTitle=\ Foreground Color 
+ACSD_CEP_Fg=
+CEP_FgTrans=\ Inherit
+CEP_FgTrans_Mnemonic=N
+ACSD_CEP_FgTrans=
+CEP_BgTitle=\ Background Color 
+ACSD_CEP_Bg=
+CEP_BgTrans=\ Inherit
+CEP_BgTrans_Mnemonic=H
+ACSD_CEP_BgTrans=
+CEP_PreviewTitle=\ Preview 
+ACSN_CEP_Preview=Color Preview
+ACSD_CEP_Preview=
 
 #ColoringArrayEditorPanel
-CAEP_SyntaxLabel=Syntax
+CAEP_SyntaxLabel=Syntax:
+CAEP_SyntaxLabel_Mnemonic=S
+ACSD_CAEP_Syntax=
 CAEP_ColoringLabel=Coloring
 CAEP_DefaultColoringName=DEFAULT
+ACSD_CAEP_Panel=
 
 #KeyBindingsEditorPanel
-KBEP_Actions=Actions
-KBEP_Sequences=Shortcut Sequences
+KBEP_Actions=Actions:
+ACSN_KBEP_Actions=Actions
+ACSD_KBEP_Actions=
+KBEP_Sequences=Keybindings:
+KBEP_Sequences_Mnemonic=K
+ACSD_KBEP_Sequences=
 KBEP_Add=Add...
+KBEP_Add_Mnemonic=A
+ACSD_KBEP_Add=
 KBEP_Remove=Remove
-KBEP_AddSequence=Add Shortcut Sequence
+KBEP_Remove_Mnemonic=R
+ACSD_KBEP_Remove=
+KBEP_action_sort_button=\ Sort by Action
+KBEP_action_sort_button_mnemonic=S
+ACSD_KBEP_action_sort_button=
+KBEP_name_sort_button=\ Sort by Name
+KBEP_name_sort_button_mnemonic=N
+ACSD_KBEP_name_sort_button=
+ACSD_KBEP_Panel=
+
+#KeyBindingsEditorPanel.KeySequenceRequester
+KBEP_AddSequence=Add Keybinding
 KBEP_OK_LABEL=OK
 KBEP_CLEAR_LABEL=Clear
+KBEP_CLEAR_Mnemonic=C
+ACSD_KBEP_OK=
+ACSD_KBEP_CLEAR=
 KBEP_FMT_Collision=This shortcut sequence conflicts with sequence <{0}> bound to "{1}".
-KBEP_action_sort_button=Sort by action
-KBEP_name_sort_button=Sort by name
-
-#KeySequenceInputPanel
-LBL_KSIP_Sequence=Shortcut Sequence
-
+LBL_KSIP_Sequence=Shortcut SequenceQQQ:
 
 PROP_KeyBindings=Key Bindings
 PROP_Abbreviations=Abbreviations
@@ -806,29 +835,71 @@ AEP_EnterAbbrev=Enter Abbreviation
 AEP_AbbrevTitle=Abbreviation
 AEP_ExpandTitle=Expanded String
 AEP_Add=Add...
+AEP_Add_Mnemonic=A
+ACSD_AEP_Add=
 AEP_Edit=Edit...
+AEP_Edit_Mnemonic=E
+ACSD_AEP_Edit=
 AEP_Remove=Remove
+AEP_Remove_Mnemonic=R
+ACSD_AEP_Remove=
 AIP_Abbrev=Abbreviation:
+AIP_Abbrev_Mnemonic=A
+ACSD_AIP_Abbrev=
 AIP_Expand=Expansion:
+AIP_Expand_Mnemonic=E
+ACSD_AIP_Expand
+ACSN_AEP_Table=Abbreviations
+ACSD_AEP_Table=
+ACSD_AEP=
+ACSD_AIP=
 
 #MacrosEditorPanel
 MEP_EnterMacro=Enter Macro
 MEP_MacroTitle=Macro
 MEP_ExpandTitle=Expanded String
 MEP_Add=Add...
+MEP_Add_Mnemonic=A
+ACSD_MEP_Add=
 MEP_Edit=Edit...
+MEP_Edit_Mnemonic=E
+ACSD_MEP_Edit=
 MEP_Remove=Remove
+MEP_Remove_Mnemonic=R
+ACSD_MEP_Remove=
+ACSN_MEP_Table=Macros
+ACSD_MEP_Table=
+ACSD_MEP=
+
 MIP_Macro=Macro:
+MIP_Macro_Mnemonic=M
+ACSD_MIP_Macro=
 MIP_Expand=Expansion:
+MIP_Expand_Mnemonic=E
+ACSD_MIP_Expand=
+ACSD_MIP=
 
 # ScrollInsetsCustomEditor
 SIE_EXC_BadFormatValue=Value should be in format [top[%],left[%],bottom[%],right[%]]
 SIC_InvalidValue=Invalid value entered
-SICE_Insets= Insets 
+SICE_Insets=\ Insets 
 SICE_Top=Top:
+SICE_Top_Mnemonic=T
+ACSD_SICE_Top=
 SICE_Bottom=Bottom:
+SICE_Bottom_Mnemonic=B
+ACSD_SICE_Bottom=
 SICE_Left=Left:
+SICE_Left_Mnemonic=L
+ACSD_SICE_Left=
 SICE_Right=Right:
+SICE_Right_Mnemonic=R
+ACSD_SICE_Right=
+ACSD_SICE_Top=
+ACSD_SICE_Bottom=
+ACSD_SICE_Left=
+ACSD_SICE_Right=
+ACSD_SICE=
 
 # Coloring desc
 PROP_Coloring=Fonts & Colors
